--- a/SSO/Application/OtusHighload.Services/OtusHighload.Application.csproj
+++ b/SSO/Application/OtusHighload.Services/OtusHighload.Application.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\Common\DataAccess\Common.DataAccess\UZ.DataAccess.csproj" />
+      <ProjectReference Include="..\..\..\Common\Utility\Common.Utility.csproj" />
+      <ProjectReference Include="..\..\Domain\OtusHighload.Entities\OtusHighload.Entities.csproj" />
+    </ItemGroup>
+
 </Project>
