--- a/SSO/Host/OtusHighload.Api.csproj
+++ b/SSO/Host/OtusHighload.Api.csproj
@@ -5,10 +5,30 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>OtusHighload</RootNamespace>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="aspnetapp.pfx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Application\OtusHighload.Services\OtusHighload.Application.csproj" />
+      <ProjectReference Include="..\Domain\OtusHighload.Entities\OtusHighload.Entities.csproj" />
+      <ProjectReference Include="..\Infrastructure\OtusHighload.DataAccess\OtusHighload.DataAccess.csproj" />
+      <ProjectReference Include="..\Infrastructure\OtusHighload.Registry\OtusHighload.Registry.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
