--- a/SSO/Application/OtusHighload.Services/OtusHighload.Application.csproj
+++ b/SSO/Application/OtusHighload.Services/OtusHighload.Application.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\Common\DataAccess\Common.DataAccess\UZ.DataAccess.csproj" />
       <ProjectReference Include="..\..\..\Common\Utility\Common.Utility.csproj" />
+      <ProjectReference Include="..\..\Contracts\OtusHighload.Contracts\OtusHighload.Contracts.csproj" />
       <ProjectReference Include="..\..\Domain\OtusHighload.Entities\OtusHighload.Entities.csproj" />
     </ItemGroup>
 
