--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -8,8 +8,9 @@ services:
     build:
       context: ../
       dockerfile: SSO/Host//Dockerfile
-    depends_on:
-      - postgres
+    profiles:
+      - development
+      - production
 
   #### Infrastructure
   postgres:
@@ -17,6 +18,8 @@ services:
     container_name: postgres
     ports:
       - 5432:5432
+    profiles:
+      - development
     volumes:
       - postgres:/var/lib/postgresql/data/
 
