Add load testing capabilities, user search API, and enhance data handling.
Integrated a JMeter stress test plan, added user search API, and bulk user creation endpoint. Improved repository handling with new bulk insert and fuzzy search methods. Refactored namespace `UZ.DataAccess` to `Common.DataAccess` across the project. Updated Dockerfile and project references. Added name and hobby randomizers for data generation.

--- a/SSO/Application/OtusHighload.Services/OtusHighload.Application.csproj
+++ b/SSO/Application/OtusHighload.Services/OtusHighload.Application.csproj
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\Common\DataAccess\Common.DataAccess\UZ.DataAccess.csproj" />
+      <PackageReference Include="Faker" Version="1.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\Common\DataAccess\Common.DataAccess\Common.DataAccess.csproj" />
       <ProjectReference Include="..\..\..\Common\Utility\Common.Utility.csproj" />
       <ProjectReference Include="..\..\Contracts\OtusHighload.Contracts\OtusHighload.Contracts.csproj" />
       <ProjectReference Include="..\..\Domain\OtusHighload.Entities\OtusHighload.Entities.csproj" />
