--- a/Common/DataAccess/Common.DataAccess/Common.DataAccess.csproj
+++ b/Common/DataAccess/Common.DataAccess/Common.DataAccess.csproj
@@ -11,6 +11,11 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.7" />
         <PackageReference Include="Npgsql" Version="9.0.3" />
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.5" />
+        <PackageReference Include="Polly" Version="8.5.2" />
+        <PackageReference Include="Polly.Extensions" Version="8.5.2" />
+        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+        <PackageReference Include="Polly.RateLimiting" Version="8.5.2" />
     </ItemGroup>
 
 </Project>
