--- a/SSO/Domain/OtusHighload.Entities/OtusHighload.Entities.csproj
+++ b/SSO/Domain/OtusHighload.Entities/OtusHighload.Entities.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\Common\DataAccess\Common.DataAccess\UZ.DataAccess.csproj" />
+      <ProjectReference Include="..\..\..\Common\DataAccess\Common.DataAccess\Common.DataAccess.csproj" />
     </ItemGroup>
 
 </Project>
