--- a/SSO/Host/appsettings.Development.json
+++ b/SSO/Host/appsettings.Development.json
@@ -2,10 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=otus_highload;Pooling=true;"
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=otus_highload;Pooling=true;MaxPoolSize=200;"
   }
 }
