--- a/SSO/Host/appsettings.Development.json
+++ b/SSO/Host/appsettings.Development.json
@@ -1,11 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=otus_highload;Pooling=true;MaxPoolSize=200;"
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=otus_highload;Pooling=true;MaxPoolSize=90;"
   }
 }
