Add PostgreSQL replication setup and enhance database context handling.
Introduced Docker Compose configuration and scripts for PostgreSQL master-slave replication. Updated `OtusContextFactory` and `OtusContext` to support read operations on slave nodes and write operations on the master. Integrated changes into the SSO service and added relevant environment variables. Included replication-related scripts and configurations for seamless orchestration.

--- a/SSO/Host/appsettings.Development.json
+++ b/SSO/Host/appsettings.Development.json
@@ -6,6 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=otus_highload;Pooling=true;MaxPoolSize=90;"
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=postgres;Pooling=true;MaxPoolSize=90;",
+    "Slave1Connection": "User ID=postgres;Password=postgres;Host=postgres-slave1;Port=5433;Database=postgres;Pooling=true;MaxPoolSize=90;",
+    "Slave2Connection": "User ID=postgres;Password=postgres;Host=postgres-slave2;Port=5434;Database=postgres;Pooling=true;MaxPoolSize=90;"
   }
 }
