--- a/deployment/Replication/Postgres/Slave1/Dockerfile
+++ b/deployment/Replication/Postgres/Slave1/Dockerfile
@@ -1,7 +1,5 @@
-﻿FROM postgres:14
+FROM postgres:14
 
-# Копируем скрипты инициализации
 COPY init-scripts/ /docker-entrypoint-initdb.d/
 
-# Даем права на выполнение
 RUN chmod +x /docker-entrypoint-initdb.d/*.sh
