--- a/SSO/Host/appsettings.Development.json
+++ b/SSO/Host/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=otus_highload;Pooling=true;MaxPoolSize=90;"
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=postgres;Pooling=true;MaxPoolSize=90;"
   }
 }
