--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     profiles:
       - development
       - production
+    depends_on:
+      - postgres
+      - redis
 
   #### Infrastructure
   postgres:
@@ -23,8 +26,16 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data/
 
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
 volumes:
   postgres:
+  redis_data:
 
 networks:
   default:
