--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -12,8 +12,10 @@ services:
       - development
       - production
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
   dialogs:
     image: ${DOCKER_REGISTRY}/africa-platform/dialogs:${TAG}
@@ -26,39 +28,56 @@ services:
       - development
       - production
     depends_on:
-      - dialogs-pg-1
-      - dialogs-pg-2
+      dialogs-pg-1:
+          condition: service_healthy
+      dialogs-pg-2:
+          condition: service_healthy
 
   #### Infrastructure
   postgres:
     image: postgres:13-alpine
     container_name: postgres
     ports:
-      - 5432:5432
+      - "5432:5432"
     profiles:
       - development
     volumes:
       - postgres:/var/lib/postgresql/data/
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   dialogs-pg-1:
     image: postgres:13-alpine
     container_name: dialogs-pg-1
     ports:
-      - 5433:5432
+      - "5443:5432"
     profiles:
       - development
     volumes:
-      - dialogs_pg_1:/var/lib/postgresql/data/
+      - dialogs_pg_one:/var/lib/postgresql/data/
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   dialogs-pg-2:
     image: postgres:13-alpine
     container_name: dialogs-pg-2
     ports:
-      - 5434:5432
+      - "5444:5432"
     profiles:
       - development
     volumes:
-      - dialogs_pg_2:/var/lib/postgresql/data/
+      - dialogs_pg_two:/var/lib/postgresql/data/
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:7-alpine
@@ -66,11 +85,16 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 1s
+      timeout: 3s
+      retries: 30
 
 volumes:
   postgres:
-  dialogs_pg_1:
-  dialogs_pg_2:
+  dialogs_pg_one:
+  dialogs_pg_two:
   redis_data:
 
 networks:
