--- a/Infrastructure/PostSocket/Hosts/PostSocket.Daemon/appsettings.Development.json
+++ b/Infrastructure/PostSocket/Hosts/PostSocket.Daemon/appsettings.Development.json
@@ -1,13 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=postgres;Pooling=true;MaxPoolSize=90;",
-    "Redis":"redis:6379"
   },
   "RabbitMQ": {
     "HostName": "rabbitmq",
