--- a/SSO/Application/OtusHighload.Services/OtusHighload.Application.csproj
+++ b/SSO/Application/OtusHighload.Services/OtusHighload.Application.csproj
@@ -8,9 +8,11 @@
 
     <ItemGroup>
       <PackageReference Include="Faker" Version="1.2.0" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Common\Contracts\Common.Contracts\Common.Contracts.csproj" />
       <ProjectReference Include="..\..\..\Common\DataAccess\Common.DataAccess\Common.DataAccess.csproj" />
       <ProjectReference Include="..\..\..\Common\Utility\Common.Utility.csproj" />
       <ProjectReference Include="..\..\Contracts\OtusHighload.Contracts\OtusHighload.Contracts.csproj" />
