Integrate Tarantool for in-memory messaging and optimize dialog services.
Replaced Postgres-based implementation with Tarantool for in-memory message handling. Created Tarantool configurations, Docker setup, and UDFs for core message operations (`send_message`, `get_dialog`, `get_user_stats`, `health_check`). Refactored `DialogService` and replaced SQL queries with repository calls. Updated project dependencies, removed shard-based logic, and transitioned to a single connection model for message management.

--- a/Dialogs/Infrastructure/Dialogs.DataAccess/Dialogs.DataAccess.csproj
+++ b/Dialogs/Infrastructure/Dialogs.DataAccess/Dialogs.DataAccess.csproj
@@ -9,17 +9,15 @@
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.1.66" />
         <PackageReference Include="Npgsql" Version="9.0.3" />
+        <PackageReference Include="progaudi.tarantool" Version="0.16.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\Common\DataAccess\Common.DataAccess\Common.DataAccess.csproj" />
       <ProjectReference Include="..\..\..\Common\Utility\Common.Utility.csproj" />
+      <ProjectReference Include="..\..\Application\Dialogs.Application\Dialogs.Application.csproj" />
       <ProjectReference Include="..\..\Contracts\Dialogs.Contracts\Dialogs.Contracts.csproj" />
       <ProjectReference Include="..\..\Domain\Dialogs.Entities\Dialogs.Entities.csproj" />
-      <ProjectReference Include="..\Common\DataAccess\Common.DataAccess\Common.DataAccess.csproj" />
-      <ProjectReference Include="..\Common\Utility\Common.Utility.csproj" />
-      <ProjectReference Include="..\Dialogs.Contracts\Dialogs.Contracts.csproj" />
-      <ProjectReference Include="..\Dialogs.Entities\Dialogs.Entities.csproj" />
     </ItemGroup>
 
 </Project>
