--- a/Dialogs/Host/Dialogs.Api/appsettings.Development.json
+++ b/Dialogs/Host/Dialogs.Api/appsettings.Development.json
@@ -5,18 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Database": {
-    "Shards": [
-      {
-        "ShardId": 1,
-        "ConnectionString": "Host=dialogs-pg-1;Port=5432;Database=postgres;Username=postgres;Password=postgres",
-        "IsActive": true
-      },
-      {
-        "ShardId": 2,
-        "ConnectionString": "Host=dialogs-pg-2;Port=5432;Database=postgres;Username=postgres;Password=postgres",
-        "IsActive": true
-      }
-    ]
+  "ConnectionStrings": {
+    "Dialogs": "dialogs-db"
   }
 }
