--- a/deployment/docker-compose.override.yml
+++ b/deployment/docker-compose.override.yml
@@ -20,12 +20,7 @@ services:
       "Kestrel:Certificates:Default:Path": "/app/aspnetapp.pfx"
       "Kestrel:Certificates:Default:Password": "123"
       "Kestrel:Certificates:Default:AllowInvalid": "true"
-      "Database__Shards__0__ShardId": 1
-      "Database__Shards__0__ConnectionString": "Host=dialogs-pg-2;Port=5432;Database=postgres;Username=postgres;Password=postgres"
-      "Database__Shards__0__IsActive": true
-      "Database__Shards__1__ShardId": 2
-      "Database__Shards__1__ConnectionString": "Host=dialogs-pg-1;Port=5432;Database=postgres;Username=postgres;Password=postgres"
-      "Database__Shards__1__IsActive": true
+      "ConnectionStrings__Dialogs": "dialogs-db"
       "RabbitMQ__HostName": "rabbitmq"
       "RabbitMQ__UserName": "otus"
       "RabbitMQ__Password": "6GccewECzxGJgTh4QYr82D8JUgCxsC5E"
