--- a/deployment/Replication/replica-compose.yml
+++ b/deployment/Replication/replica-compose.yml
@@ -1,32 +1,83 @@
 ﻿version: '3.8'
 
 services:
-  sso:
-    image: ${DOCKER_REGISTRY}/africa-platform/sso:${TAG}
-    container_name: sso
+  sso1:
+    image: ${DOCKER_REGISTRY}/africa-platform/sso1:${TAG}
+    container_name: sso1
     restart: always
     build:
       context: ../../
-      dockerfile: SSO/Host//Dockerfile
+      dockerfile: SSO/Host/Dockerfile
     profiles:
       - development
       - production
     networks:
       - postgres-network
     depends_on:
-      postgres:
-        condition: service_healthy
-      postgres-slave1:
-        condition: service_healthy
-      postgres-slave2:
-        condition: service_healthy
+      - haproxy
+
+  sso2:
+    image: ${DOCKER_REGISTRY}/africa-platform/sso2:${TAG}
+    container_name: sso2
+    restart: always
+    build:
+      context: ../../
+      dockerfile: SSO/Host/Dockerfile
+    profiles:
+      - development
+      - production
+    networks:
+      - postgres-network
+    depends_on:
+      - haproxy
+
+  sso3:
+    image: ${DOCKER_REGISTRY}/africa-platform/sso3:${TAG}
+    container_name: sso3
+    restart: always
+    build:
+      context: ../../
+      dockerfile: SSO/Host/Dockerfile
+    profiles:
+      - development
+      - production
+    networks:
+      - postgres-network
+    depends_on:
+      - haproxy
 
   #### Infrastructure
+  nginx:
+    build:
+      context: ./
+      dockerfile: ./nginx/Dockerfile
+    ports:
+      - "5001:443"
+    depends_on:
+      - sso1
+      - sso2
+      - sso3
+    networks:
+      - postgres-network
+
+  haproxy:
+    image: haproxy:2.4
+    volumes:
+      - ./haproxy/:/usr/local/etc/haproxy/
+    ports:
+      - "5432:5432"
+    profiles:
+      - development
+    depends_on:
+      - postgres
+      - postgres-slave1
+      - postgres-slave2
+    networks:
+      - postgres-network
+
   postgres:
     build: ./postgres/Master
     container_name: postgres
-    ports:
-      - 5432:5432
     profiles:
       - development
     networks:
@@ -42,8 +93,6 @@ services:
   postgres-slave1:
     build: ./postgres/Slave1
     container_name: postgres-slave1
-    ports:
-      - "5433:5432"
     profiles:
       - development
     networks:
@@ -62,8 +111,6 @@ services:
   postgres-slave2:
     build: ./postgres/Slave2
     container_name: postgres-slave2
-    ports:
-      - "5434:5432"
     profiles:
       - development
     networks:
