Add support for PostgreSQL read/write separation via HAProxy
Introduced new HAProxy configuration for distinct read/write backends and updated ports in deployment files. Added support for `ReadConnection` in connection strings and modified `OtusContext` to utilize separate slave and master connections. Improved replication setup scripts and increased wait time for master readiness.

--- a/SSO/Host/appsettings.Development.json
+++ b/SSO/Host/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Host=haproxy;Port=5432;Database=postgres;Pooling=true;MaxPoolSize=90;",
- }
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=haproxy;Port=5443;Database=postgres;Pooling=true;MaxPoolSize=90;",
+    "ReadConnection": "User ID=postgres;Password=postgres;Host=haproxy;Port=5442;Database=postgres;Pooling=true;MaxPoolSize=90;"
+  }
 }
