--- a/Counter/Host/Counter.Api/appsettings.Development.json
+++ b/Counter/Host/Counter.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=counter-pg;Port=5432;Database=postgres;Pooling=true;MaxPoolSize=90;",
+    "Redis":"redis:6379"
+  },
+  "Services": {
+    "Dialogs": "http://dialogs"
   }
 }
