--- a/Counter/Application/Counter.Application/Counter.Application.csproj
+++ b/Counter/Application/Counter.Application/Counter.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\..\Domain\Counter.Entities\Counter.Entities.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+    </ItemGroup>
+
 </Project>
