Add RabbitMQ integration to `Counter` and `Dialogs` modules for event-driven communication, refactor Saga processes for better error handling, and update service registrations. Include stress tests for message send and mark-read operations.

--- a/Counter/Host/Counter.Api/appsettings.Development.json
+++ b/Counter/Host/Counter.Api/appsettings.Development.json
@@ -11,5 +11,11 @@
   },
   "Services": {
     "Dialogs": "http://dialogs"
+  },
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "UserName": "otus",
+    "Password": "6GccewECzxGJgTh4QYr82D8JUgCxsC5E",
+    "VirtualHost": "/"
   }
 }
