--- a/Dialogs/Application/Dialogs.Application/Dialogs.Application.csproj
+++ b/Dialogs/Application/Dialogs.Application/Dialogs.Application.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\..\..\Common\Utility\Common.Utility.csproj" />
       <ProjectReference Include="..\..\Domain\Dialogs.Entities\Dialogs.Entities.csproj" />
       <ProjectReference Include="..\..\Infrastructure\Dialogs.DataAccess\Dialogs.DataAccess.csproj" />
