--- a/Counter/Application/Counter.Application/Counter.Application.csproj
+++ b/Counter/Application/Counter.Application/Counter.Application.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+        <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     </ItemGroup>
 
 </Project>
