Implement PostgreSQL master-slave replication with HAProxy read/write separation.
Enhanced deployment with new HAProxy configuration for balanced read/write segregation. Added support for `ReadConnection` in connection strings and updated `OtusContext` to utilize master and slave connections. Integrated initialization scripts for master and slave PostgreSQL nodes. Refined `docker-compose` setup with health checks, improved networking, and variable profiles. Updated stress test user count and adjusted related configurations.

--- a/Geo/Host/appsettings.Development.json
+++ b/Geo/Host/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=postgres;Pooling=true;MaxPoolSize=90;",
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=haproxy;Port=5453;Database=postgres;Pooling=true;",
+    "ReadConnection": "User ID=postgres;Password=postgres;Host=haproxy;Port=5452;Database=postgres;Pooling=true;",
     "Redis":"redis:6379"
   }
 }
